--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "course api",
   "main": "build/server",
   "scripts": {
+    "lint": "npx eslint --fix",
     "test": "set ENV=test && db-migrate --env test up && npm run build && npm run jasmine && db-migrate db:drop test",
     "jasmine": "jasmine",
     "build": "npx tsc",
@@ -28,6 +29,9 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^16.4.12",
     "@types/pg": "^8.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
+    "eslint": "^7.32.0",
     "tsc-watch": "^4.4.0",
     "typescript": "^4.3.5"
   },
