--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "lint": "npx eslint --fix",
     "test": "set ENV=test && db-migrate --env test up && npm run build && npm run jasmine && db-migrate db:drop test",
     "jasmine": "jasmine",
-    "build": "npx tsc",
+    "build": "npx tsc && npx db-migrate up",
+    "migrate": "npx db-migrate up",
     "watch": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./build/src/server.js\"",
     "start": "npx tsc && node build/src/server"
   },
@@ -29,6 +30,7 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^16.4.12",
     "@types/pg": "^8.6.1",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "eslint": "^7.32.0",
@@ -46,6 +48,7 @@
     "jasmine-spec-reporter": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "node": "^16.6.1",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "supertest": "^6.1.5"
   }
 }
